--- a/package.json
+++ b/package.json
@@ -5,10 +5,22 @@
   "bin": {
     "transcript-cleanup": "bin/transcript-cleanup.js"
   },
+  "scripts": {
+    "test": "jest"
+  },
   "author": "Jean M. Lescure",
   "license": "Apache-2.0",
   "description": "Tiny CLI to clean up raw transcript files (especially WebVTT) by removing cue headers, timestamps, and common filler vocalizations (e.g., \"uh\", \"um\", \"eh\")",
   "dependencies": {
     "@simplyhexagonal/multi-replace": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.9.2",
+    "diff": "^8.0.2",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.5",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
